--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
+    <meta property="og:image" content="https://ifh.cc/v-D4NP7A" />
   </body>
   <script
     src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.0/kakao.min.js"
